--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+* {
+    margin: 0;
+}
+
 body {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+h1 {
+    font-family: 'VT323', monospace;
+    font-size: 70px;
+}
+
+.goodluck {
+    font-weight: bold;
+    font-size: 30px;
 }
